kubernetes/01-malcolm.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: malcolm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy
            port:
              number: 443

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: malcolm
spec:
  ports:
    - port: 443
      protocol: TCP
  selector:
    app: malcolm-app

---
apiVersion: v1
kind: Service
metadata:
  name: freq
  namespace: malcolm
spec:
  ports:
    - port: 10004
      protocol: TCP
  selector:
    app: malcolm-app
    name: freq-container

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: malcolm-app
  namespace: malcolm
spec:
  selector:
    matchLabels:
      app: malcolm-app
  replicas: 1
  template:
    metadata:
      labels:
        app: malcolm-app
    spec:
      containers:
      - name: freq-container
        image: ghcr.io/idaholab/malcolmnetsec/freq:kubernetes
        imagePullPolicy: Always
        stdin: false
        tty: true
        ports:
          - containerPort: 10004
      - name: nginx-proxy-container
        image: ghcr.io/idaholab/malcolmnetsec/nginx-proxy:kubernetes
        imagePullPolicy: Always
        stdin: false
        tty: true
        ports:
          - containerPort: 443
        livenessProbe:
          exec:
            command:
            - curl
            - --insecure
            - --silent
            - https://localhost:443
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 10
        volumeMounts:
        - name: etc-nginx-volume
          mountPath: /etc/nginx/configmap
        - name: var-local-catrust-volume
          mountPath: /var/local/ca-trust/configmap
        - name: etc-nginx-certs-volume
          mountPath: /etc/nginx/certs/configmap
        - name: etc-nginx-certs-pem-volume
          mountPath: /etc/nginx/dhparam/configmap
      volumes:
      - name: etc-nginx-volume
        configMap:
          name: etc-nginx
      - name: var-local-catrust-volume
        configMap:
          name: var-local-catrust
      - name: etc-nginx-certs-volume
        configMap:
          name: etc-nginx-certs
      - name: etc-nginx-certs-pem-volume
        configMap:
          name: etc-nginx-certs-pem
